--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.2",
     "react-scripts": "5.0.1",
-    "react-telegram-login": "^1.1.2",
-    "web-vitals": "^2.1.4"
+    "react-telegram-login": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.4.0"
+    "react-router-dom": "^6.4.0",
+    "web-vitals": "^3.0.2"
   }
 }
